--- a/swiggy.html
+++ b/swiggy.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="other"><u>Other</u></div>
                 <div class="place">
-                       <div>Thiruvananthapuram, Kerala, India</div>
+                       <div>Pathanamthitta, Kerala, India</div>
                        <div class="downarrow"><i class="fa-solid fa-angle-down"></i></div>
                 </div>
             </div>
