--- a/swiggy.html
+++ b/swiggy.html
@@ -27,7 +27,7 @@
             <div class="head2">
                     <div class="corporate">
                         <div class="menu"><i class="fa-solid fa-tv"></i></div>
-                        <div>Swiggy Corporate</div>
+                        <div>Swiggy</div>
                     </div>
                     <div class="search">
                         <div class="menu"><i class="fa-solid fa-magnifying-glass"></i></div>
